on-minikube-ingress/master-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: master-cluster-ip-service
  namespace: jenkins
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http-port
  selector:
    app: jenkins
