on-minikube-ingress/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  namespace: jenkins
spec:
  rules:
    - host: "on-minikube-ingress.local"
      http:
        paths:
          - path: /
            backend:
              serviceName: master-cluster-ip-service
              servicePort: 8080
